apps/eligibility-checker-ui/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: efv-ui
  labels:
    app: efv-ui
    app.kubernetes.io/name: efv-ui
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: efv-ui
